# portfolio

./: .editorconfig  Caddyfile  README.md  compose-bak.yaml  compose.yaml
.zed/: settings.json
backend/: .dockerignore  Dockerfile  Dockerfile.dev  config.example.toml  pyproject.toml
backend/src/portfolio/: main.py
backend/src/portfolio/lib/api/: hardcover_api.py
backend/src/portfolio/lib/util/: config.py  logger.py
backend/src/portfolio/routers/: spotify.py
backend/src/src/lib/api/: hardcover_api.py
frontend/: .dockerignore  .prettierrc  Dockerfile.dev  eslint.config.js  package.json
frontend/src/: app.html
frontend/src/lib/components/: navbar.svelte
frontend/src/lib/utils/: theme-toggle.svelte.ts
frontend/src/routes/: +layout.svelte
frontend/src/styles/: app.css
python-backend/: .gitignore  config.example.toml  pyproject.toml
python-backend/python-backend/lib/: spotify_helper.py
python-backend/python_backend/lib/: config_helper.py
python_backend/: .gitignore  Dockerfile  config.example.toml  pyproject.toml
python_backend/python_backend/: dependencies.py  main.py
python_backend/python_backend/lib/: config_helper.py  hardcover_api.py  spotify_helper.py
python_backend/python_backend/routers/: books.py  location.py  location_img.py  spotify.py
python_backend/src/python_backend/: deps.py  main.py
python_backend/src/python_backend/lib/: config.py  config_helper.py  spotify_helper.py
python_backend/src/python_backend/lib/api/: hardcover_api.py  spotify_api.py
python_backend/src/python_backend/lib/util/: singleton.py
python_backend/src/python_backend/routers/: books.py  spotify.py
solidjs-frontend/: package.json
solidjs-frontend/src/: index.tsx
solidjs-frontend/src/components/: navbar.tsx  profile.tsx  projects.tsx
solidjs_frontend/: Dockerfile  api.const.toml  package.json  tsconfig.json  vite.config.ts
solidjs_frontend/src/: index.tsx
solidjs_frontend/src/components/: aboutme.tsx  location-widget.tsx  navbar.tsx  profile.tsx  projects.tsx  skeleton.tsx  spotify-widget.tsx
solidjs_frontend/src/pages/: home.tsx
sveltekit_frontend/: .dockerignore  Dockerfile  Dockerfile.prod  package.json  svelte.config.js  vite.config.ts
sveltekit_frontend/src/: api.const.json  app.html
sveltekit_frontend/src/lib/: theme.svelte.ts
sveltekit_frontend/src/lib/main_page/: navbar.svelte  origins.svelte  profileCard.svelte  sidebarWidget.svelte  spotifyState.svelte.ts  spotifyWidget.svelte
sveltekit_frontend/src/lib/main_page/misc/: DevdottoIcon.svelte
sveltekit_frontend/src/routes/: +layout.svelte  +page.svelte
sveltekit_frontend/src/styles/: app.css
sveltekit_frontend/static/: the-thinker.glb
