[project]
name = "portfolio"
version = "0.1.0"
description = ""
authors = [{ name = "Derin Onder Eren", email = "derinondereren@gmail.com" }]
requires-python = ">=3.13"

dependencies = [
    "aiohttp[speedups]>=3.13.5,<4.0.0",
    "toml >=0.10.2,<0.11.0",
    "loguru>=0.7.3",
    "fastapi[standard]>=0.136.1",
]

[dependency-groups]
dev = [
	"ruff>=0.11.2,<0.12.0"
]


[tool.ruff]
line-length = 120

[tool.basedpyright]
venvPath = "."
venv = ".venv"

reportArgumentType = false
reportReturnType = false
reportCallInDefaultInitializer = false

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["W191", "D206"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true

[build-system]
requires = ["uv-build>=0.7.19,<0.8.0"]
build-backend = "uv_build"
