[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Derin Onder Eren",email = "derinondereren@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standart] (>=0.115.11,<0.116.0)",
    "aiohttp[speedups] (>=3.11.13,<4.0.0)",
    "toml (>=0.10.2,<0.11.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
