[project]
name = "python_backend"
version = "0.1.0"
description = ""
authors = [{ name = "Derin Onder Eren", email = "derinondereren@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "aiohttp[speedups] (>=3.11.13,<4.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "fastapi[standard] (>=0.115.11,<0.116.0)",
]

[tool.poetry]
packages = [{ include = "python_backend", from = "python_backend" }]

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["W191", "D206", "ERA001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
