[project]
name = "python_backend"
version = "0.1.0"
description = ""
authors = [{ name = "Derin Onder Eren", email = "derinondereren@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "aiohttp[speedups] >=3.11.13,<4.0.0",
    "toml >=0.10.2,<0.11.0",
    "fastapi[standard] >=0.115.11,<0.116.0",
]

[tool.uv]
# dev-only dependencies
dev-dependencies = ["ruff>=0.11.2,<0.12.0"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["W191", "D206"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true

[build-system]
requires = ["uv-build>=0.7.19,<0.8.0"]
build-backend = "uv_build"
